[CIR][ObjC] Add AST to CIR codegen for Objective-C message sends
This commit implements the code generation from Clang AST to ClangIR
for Objective-C message expressions.

New file: CIRGenObjC.cpp (~520 lines)
Implements:
- emitObjCMessageExpr() - Main visitor for ObjCMessageExpr
  - Handles instance messages: [obj method]
  - Handles class messages: [MyClass alloc]
  - Handles super messages: [super dealloc]

- loadObjCSelf() - Loads 'self' parameter in methods
- emitObjCClassRef() - Generates class reference operations

Updates to existing files:
- CIRGenFunction.h: Add method declarations
- CIRGenExprScalar.cpp: Update VisitObjCMessageExpr
- CIRGenExprAggregate.cpp: Update VisitObjCMessageExpr
- CIRGenExprComplex.cpp: Update VisitObjCMessageExpr
- CMakeLists.txt: Add CIRGenObjC.cpp to sources

The code generator creates cir.objc.message and cir.objc.message_super
operations with preserved type and selector information.

Note: This commit enables message send codegen, but Objective-C
interface/method declarations are not yet supported, so end-to-end
compilation from .m files will not work until those are implemented.

--- a/clang/lib/CIR/CodeGen/CMakeLists.txt
+++ b/clang/lib/CIR/CodeGen/CMakeLists.txt
@@ -29,6 +29,7 @@ add_clang_library(clangCIR
   CIRGenFunction.cpp
   CIRGenItaniumCXXABI.cpp
   CIRGenModule.cpp
+  CIRGenObjC.cpp
   CIRGenOpenACC.cpp
   CIRGenOpenACCClause.cpp
   CIRGenRecordLayoutBuilder.cpp
